--- a/_posts/Normalization/AdaIN/2019-02-24-AdaIN.md
+++ b/_posts/Normalization/AdaIN/2019-02-24-AdaIN.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title:  "AdaIN(Arbitrary Style Transfer in Real-time with Adaptive Instance Normalization
-) 논문 Review"
+title:  "[논문 review] AdaIN"
 image: ''
 date:   2019-02-24 19:35:00
 tags:
